--- a/trabalho/index.html
+++ b/trabalho/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,5 +9,7 @@
 <body>
     <h1>testando o git ieie</h1>
     teste de ediçao
+    <p>testando as possibilidades</p>
+    <h2>se der errado o cassio arruma!!!!!</h2>
 </body>
 </html>
